# pareto-optimizer

./: README.md
C++14/: CMakeLists.txt  csv_writer.cpp  csv_writer.h  main.cpp  objective.cpp  objective.h  pareto.cpp  pareto.h  pareto_interface.cpp  pareto_interface.h  plotter.py  random_generator.h  types.h
Convergence Analysis/: Convergence_Analysis.ipynb
Octave (Matlab)/: main_algorithm.m
Python3.7/: Main.ipynb  animator.py  benchmarks.py  main_algorithm.py  requirements.txt
